change order deletion form; fix bugs

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -611,3 +611,4 @@ transaction.user=UserCN
 transaction.acceptanceDatetime=Acceptance dateCN
 transaction.acceptanceUser=Acceptance userCN
 transaction.сonfirmation=СonfirmationCN
+ordersearch.erroremail=Format: user@user.com CN
