--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -590,8 +590,10 @@ order.cannotcancel = 无法删除订单
 inputoutput.datetime = 交易日期
 inputoutput.currency=货币
 inputoutput.amount = 数目
-inputoutput.commissionAmount=佣金款额
+inputoutput.commissionAmount=手续费
 inputoutput.merchant=付款系统
 inputoutput.operationtype = 类型
-inputoutput.order =单据 ID
+inputoutput.order =ID业务
 inputoutput.status =状态
+inputoutput.statusTrue=完成
+inputoutput.statusFalse=有待
