--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -549,8 +549,10 @@ session.expire=The session has expired. You need to log in again.
 inputoutput.datetime=Date
 inputoutput.currency=Currency
 inputoutput.amount=Amount
-inputoutput.commissionAmount=Fee amount
+inputoutput.commissionAmount=Commission
 inputoutput.merchant=Payment system
 inputoutput.operationtype=Type
-inputoutput.order=Order ID
+inputoutput.order=Transaction ID
 inputoutput.status=Status
+inputoutput.statusTrue=Completed
+inputoutput.statusFalse=Pending
