--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -615,8 +615,10 @@ session.expire=Время сессии истекло. Необходимо ав
 inputoutput.datetime=Дата транзакции
 inputoutput.currency=Валюта
 inputoutput.amount=Сумма
-inputoutput.commissionAmount=Сумма комиссии
+inputoutput.commissionAmount=Комиссия
 inputoutput.merchant=Платежная система
 inputoutput.operationtype=Тип
-inputoutput.order=Ордер ID
+inputoutput.order=ID транзакции
 inputoutput.status=Статус
+inputoutput.statusTrue=Выполнено
+inputoutput.statusFalse=В ожидании
