add terms&conditions, privacy policy, return policy pages

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -596,6 +596,36 @@ inputoutput.operationtype = 类型
 inputoutput.order =单据 ID
 inputoutput.status =状态
 
+dashboard.terms=Terms and Conditions
+dashboard.privacy=Privacy Policy
+dashboard.return=Return Policy
+
+dashboard.termsContent=<h5>Comprehensum, quod cognitum non habet?</h5> \
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Illud dico, ea, quae dicat, praeclare inter se cohaerere. Summum ením bonum exposuit vacuitatem doloris; Quippe: habes enim a rhetoribus; Duo Reges: constructio interrete. Quid igitur dubitamus in tota eius natura quaerere quid sit effectum? </p>\
+<h5>Nec enim, dum metuit, iustus est, et certe, si metuere destiterit, non erit;</h5>\
+<p>Duarum enim vitarum nobis erunt instituta capienda. Primum in nostrane potestate est, quid meminerimus? Sed ea mala virtuti magnitudine obruebantur. Stoici scilicet. Ut aliquid scire se gaudeant? Philosophi autem in suis lectulis plerumque moriuntur. </p>\
+<p>Cuius quidem, quoniam Stoicus fuit, sententia condemnata mihi videtur esse inanitas ista verborum. An tu me de L. Legimus tamen Diogenem, Antipatrum, Mnesarchum, Panaetium, multos alios in primisque familiarem nostrum Posidonium. Non est igitur voluptas bonum. Huius, Lyco, oratione locuples, rebus ipsis ielunior. Ergo id est convenienter naturae vivere, a natura discedere. </p>\
+<p>Quid adiuvas? Negabat igitur ullam esse artem, quae ipsa a se proficisceretur; Tu enim ista lenius, hic Stoicorum more nos vexat. Quid ergo attinet gloriose loqui, nisi constanter loquare? Cum autem in quo sapienter dicimus, id a primo rectissime dicitur. An hoc usque quaque, aliter in vita? Quare attende, quaeso. Quid enim de amicitia statueris utilitatis causa expetenda vides. Sin tantum modo ad indicia veteris memoriae cognoscenda, curiosorum. </p>\
+<p>Quod autem principium officii quaerunt, melius quam Pyrrho; Sed ad bona praeterita redeamus. Istam voluptatem, inquit, Epicurus ignorat? Si qua in iis corrigere voluit, deteriora fecit. Utilitatis causa amicitia est quaesita. Habes, inquam, Cato, formam eorum, de quibus loquor, philosophorum. </p>
+
+dashboard.privacyContent=<h5>Sed ut iis bonis erigimur, quae expectamus, sic laetamur iis, quae recordamur.</h5>\
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nihil enim iam habes, quod ad corpus referas; Omnes enim iucundum motum, quo sensus hilaretur. Quis est tam dissimile homini. Mihi enim satis est, ipsis non satis. Quod si ita se habeat, non possit beatam praestare vitam sapientia. </p>\
+<p>Equidem soleo etiam quod uno Graeci, si aliter non possum, idem pluribus verbis exponere. Duo Reges: constructio interrete. Sit hoc ultimum bonorum, quod nunc a me defenditur; Cum salvum esse flentes sui respondissent, rogavit essentne fusi hostes. Nonne videmus quanta perturbatio rerum omnium consequatur, quanta confusio? Ille incendat? </p>\
+<p>Ac tamen hic mallet non dolere. Dic in quovis conventu te omnia facere, ne doleas. Quid vero? Age sane, inquam. Sint ista Graecorum; Nec vero intermittunt aut admirationem earum rerum, quae sunt ab antiquis repertae, aut investigationem novarum. Quod si ita sit, cur opera philosophiae sit danda nescio. </p>\
+<p>Easdemne res? Nam illud vehementer repugnat, eundem beatum esse et multis malis oppressum. Inde sermone vario sex illa a Dipylo stadia confecimus. An tu me de L. Tertium autem omnibus aut maximis rebus iis, quae secundum naturam sint, fruentem vivere. Nemo nostrum istius generis asotos iucunde putat vivere. Quis enim redargueret? </p>\
+<h5>Quia nec honesto quic quam honestius nec turpi turpius.</h5>\
+<p>Progredientibus autem aetatibus sensim tardeve potius quasi nosmet ipsos cognoscimus. Aufert enim sensus actionemque tollit omnem. Cum audissem Antiochum, Brute, ut solebam, cum M. Si qua in iis corrigere voluit, deteriora fecit. Quamquam tu hanc copiosiorem etiam soles dicere. Hoc Hieronymus summum bonum esse dixit. </p>
+
+dashboard.returnContent=<h5>Sed utrum hortandus es nobis, Luci, inquit, an etiam tua sponte propensus es?</h5>\
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum ille: Ain tandem? Neque solum ea communia, verum etiam paria esse dixerunt. Quid enim de amicitia statueris utilitatis causa expetenda vides. Quid ait Aristoteles reliquique Platonis alumni? Duo Reges: constructio interrete. Cave putes quicquam esse verius. </p>\
+<p>Conferam tecum, quam cuique verso rem subicias; Dolere malum est: in crucem qui agitur, beatus esse non potest. Cur ipse Pythagoras et Aegyptum lustravit et Persarum magos adiit? Nam memini etiam quae nolo, oblivisci non possum quae volo. Scientiam pollicentur, quam non erat mirum sapientiae cupido patria esse cariorem. Sed quot homines, tot sententiae; </p>\
+<h5>Quoniam, si dis placet, ab Epicuro loqui discimus.</h5>\
+<p>Et harum quidem rerum facilis est et expedita distinctio. Si est nihil nisi corpus, summa erunt illa: valitudo, vacuitas doloris, pulchritudo, cetera. Ita cum ea volunt retinere, quae superiori sententiae conveniunt, in Aristonem incidunt; Duo enim genera quae erant, fecit tria. </p>\
+<h5>Eorum enim est haec querela, qui sibi cari sunt seseque diligunt.</h5>\
+<p>Deinde disputat, quod cuiusque generis animantium statui deceat extremum. Habent enim et bene longam et satis litigiosam disputationem. Quis enim potest ea, quae probabilia videantur ei, non probare? Quod quidem iam fit etiam in Academia. Habes, inquam, Cato, formam eorum, de quibus loquor, philosophorum. Levatio igitur vitiorum magna fit in iis, qui habent ad virtutem progressionis aliquantum. Quis istud possit, inquit, negare? </p>\
+<p>Quamvis enim depravatae non sint, pravae tamen esse possunt. Esse enim quam vellet iniquus iustus poterat inpune. Te ipsum, dignissimum maioribus tuis, voluptasne induxit, ut adolescentulus eriperes P. Cum autem in quo sapienter dicimus, id a primo rectissime dicitur. </p>
+
+
 transaction.accept=acceptCN
 transaction.titleInvoice=Invoices for confirmationCN
 transaction.user=UserCN
