--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -628,17 +628,11 @@ dashboard.returnContent=<h5>Sed utrum hortandus es nobis, Luci, inquit, an etiam
 
 transaction.accept=acceptCN
 transaction.titleInvoice=Invoices for confirmationCN
-transaction.user=UserCN
+transaction.user=使用者
 transaction.acceptanceDatetime=Acceptance dateCN
 transaction.acceptanceUser=Acceptance userCN
 transaction.сonfirmation=СonfirmationCN
+ordersearch.erroremail=Формат: user@user.com CN
 inputoutput.statusTrue=完成
 inputoutput.statusFalse=有待
 
-transaction.accept=acceptCN
-transaction.titleInvoice=Invoices for confirmationCN
-transaction.user=UserCN
-transaction.acceptanceDatetime=Acceptance dateCN
-transaction.acceptanceUser=Acceptance userCN
-transaction.сonfirmation=СonfirmationCN
-ordersearch.erroremail=Format: user@user.com CN
