--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -598,7 +598,7 @@ inputoutput.status =状态
 
 dashboard.terms=Terms and Conditions
 dashboard.privacy=Privacy Policy
-dashboard.return=Return Policy
+dashboard.return=Rules and Regulations
 
 dashboard.termsContent=<h5>Comprehensum, quod cognitum non habet?</h5> \
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Illud dico, ea, quae dicat, praeclare inter se cohaerere. Summum ením bonum exposuit vacuitatem doloris; Quippe: habes enim a rhetoribus; Duo Reges: constructio interrete. Quid igitur dubitamus in tota eius natura quaerere quid sit effectum? </p>\
