--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -603,3 +603,6 @@ dashboard.returnContent=<h5>Sed utrum hortandus es nobis, Luci, inquit, an etiam
 <h5>Eorum enim est haec querela, qui sibi cari sunt seseque diligunt.</h5>\
 <p>Deinde disputat, quod cuiusque generis animantium statui deceat extremum. Habent enim et bene longam et satis litigiosam disputationem. Quis enim potest ea, quae probabilia videantur ei, non probare? Quod quidem iam fit etiam in Academia. Habes, inquam, Cato, formam eorum, de quibus loquor, philosophorum. Levatio igitur vitiorum magna fit in iis, qui habent ad virtutem progressionis aliquantum. Quis istud possit, inquit, negare? </p>\
 <p>Quamvis enim depravatae non sint, pravae tamen esse possunt. Esse enim quam vellet iniquus iustus poterat inpune. Te ipsum, dignissimum maioribus tuis, voluptasne induxit, ut adolescentulus eriperes P. Cum autem in quo sapienter dicimus, id a primo rectissime dicitur. </p>
+
+userwallets.startDate=Start date
+userwallets.endDate=End date
