--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -648,3 +648,6 @@ transaction.titleInvoice=确认收据
 transaction.сonfirmation=确认
 ordersearch.erroremail=格式： user@user.com
 transaction.user=使用者
+
+userwallets.startDate=Начальная дата CN
+userwallets.endDate=Конечная дата CN
