--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -649,5 +649,5 @@ transaction.сonfirmation=确认
 ordersearch.erroremail=格式： user@user.com
 transaction.user=使用者
 
-userwallets.startDate=Начальная дата CN
-userwallets.endDate=Конечная дата CN
+userwallets.startDate=初始日期
+userwallets.endDate=终日期
