fix terms & conditions (rus variant), remove return policy

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -595,19 +595,24 @@ inputoutput.merchant=付款系统
 inputoutput.operationtype = 类型
 inputoutput.order =ID业务
 inputoutput.status =状态
+inputoutput.statusTrue=完成
+inputoutput.statusFalse=有待
+
+transaction.acceptanceDatetime=订单处理日期
+transaction.acceptanceUser=处理订单的用户
+transaction.accept=接受
+transaction.titleInvoice=确认收据
+transaction.сonfirmation=确认
+ordersearch.erroremail=格式： user@user.com
+transaction.user=使用者
+
+userwallets.startDate=初始日期
+userwallets.endDate=终日期
 
 dashboard.terms=Terms and Conditions
 dashboard.privacy=Privacy Policy
-dashboard.return=Rules and Regulations
 
-dashboard.termsContent=<h5>Comprehensum, quod cognitum non habet?</h5> \
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Illud dico, ea, quae dicat, praeclare inter se cohaerere. Summum ením bonum exposuit vacuitatem doloris; Quippe: habes enim a rhetoribus; Duo Reges: constructio interrete. Quid igitur dubitamus in tota eius natura quaerere quid sit effectum? </p>\
-<h5>Nec enim, dum metuit, iustus est, et certe, si metuere destiterit, non erit;</h5>\
-<p>Duarum enim vitarum nobis erunt instituta capienda. Primum in nostrane potestate est, quid meminerimus? Sed ea mala virtuti magnitudine obruebantur. Stoici scilicet. Ut aliquid scire se gaudeant? Philosophi autem in suis lectulis plerumque moriuntur. </p>\
-<p>Cuius quidem, quoniam Stoicus fuit, sententia condemnata mihi videtur esse inanitas ista verborum. An tu me de L. Legimus tamen Diogenem, Antipatrum, Mnesarchum, Panaetium, multos alios in primisque familiarem nostrum Posidonium. Non est igitur voluptas bonum. Huius, Lyco, oratione locuples, rebus ipsis ielunior. Ergo id est convenienter naturae vivere, a natura discedere. </p>\
-<p>Quid adiuvas? Negabat igitur ullam esse artem, quae ipsa a se proficisceretur; Tu enim ista lenius, hic Stoicorum more nos vexat. Quid ergo attinet gloriose loqui, nisi constanter loquare? Cum autem in quo sapienter dicimus, id a primo rectissime dicitur. An hoc usque quaque, aliter in vita? Quare attende, quaeso. Quid enim de amicitia statueris utilitatis causa expetenda vides. Sin tantum modo ad indicia veteris memoriae cognoscenda, curiosorum. </p>\
-<p>Quod autem principium officii quaerunt, melius quam Pyrrho; Sed ad bona praeterita redeamus. Istam voluptatem, inquit, Epicurus ignorat? Si qua in iis corrigere voluit, deteriora fecit. Utilitatis causa amicitia est quaesita. Habes, inquam, Cato, formam eorum, de quibus loquor, philosophorum. </p>
-
+dashboard.termsContent=
 dashboard.privacyContent=<p><strong>Exrates does its utmost to ensure the privacy, confidentiality and security of its clients are preserved both throughout their interaction with the company and afterwards, to the fullest extent achievable by the company. </strong></p>\
 <p>1. When clients register with Exrates they acknowledge their willingness to share with the company certain private information which we use for the purpose of confirming the client’s identity and ensuring the security of their deposits and trading account. This information is collected in line with our stringent verification procedures which are used to deter international money laundering operations and to ensure the security and safety of our customer’s trading activity throughout.</p>\
 <p>2. Our clients undertake to supply us with true, updated and accurate information about their identity. Furthermore they are required to state categorically that they are registering and trading on their own behalf and are not seeking at any time to act any manner which could be considered fraudulent nor are they seeking to impersonate any other individuals for any purposes whatsoever.</p>\
@@ -625,29 +630,5 @@ dashboard.privacyContent=<p><strong>Exrates does its utmost to ensure the privac
 <p>We won’t associate targeting information, such as demographics or location, with any personally identifiable information collected from the ad or its landing page or share any personally identifiable information with any third party through remarketing tags or any product data feeds which might be associated with our ads or send Google precise location information without obtaining people’s consent.</p>\
 <p>We won’t use remarketing list with any sensitive information about our site or app visitors, whether we collected it directly or associated it with a visitor, based on the visitor’s profile or behavior on our site or app. Restrictions on list creation may apply to both individual webpages and entire websites or apps and Ad content will not imply knowledge of personally identifiable or sensitive information.</p>\
 
-dashboard.returnContent=<h5>Sed utrum hortandus es nobis, Luci, inquit, an etiam tua sponte propensus es?</h5>\
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum ille: Ain tandem? Neque solum ea communia, verum etiam paria esse dixerunt. Quid enim de amicitia statueris utilitatis causa expetenda vides. Quid ait Aristoteles reliquique Platonis alumni? Duo Reges: constructio interrete. Cave putes quicquam esse verius. </p>\
-<p>Conferam tecum, quam cuique verso rem subicias; Dolere malum est: in crucem qui agitur, beatus esse non potest. Cur ipse Pythagoras et Aegyptum lustravit et Persarum magos adiit? Nam memini etiam quae nolo, oblivisci non possum quae volo. Scientiam pollicentur, quam non erat mirum sapientiae cupido patria esse cariorem. Sed quot homines, tot sententiae; </p>\
-<h5>Quoniam, si dis placet, ab Epicuro loqui discimus.</h5>\
-<p>Et harum quidem rerum facilis est et expedita distinctio. Si est nihil nisi corpus, summa erunt illa: valitudo, vacuitas doloris, pulchritudo, cetera. Ita cum ea volunt retinere, quae superiori sententiae conveniunt, in Aristonem incidunt; Duo enim genera quae erant, fecit tria. </p>\
-<h5>Eorum enim est haec querela, qui sibi cari sunt seseque diligunt.</h5>\
-<p>Deinde disputat, quod cuiusque generis animantium statui deceat extremum. Habent enim et bene longam et satis litigiosam disputationem. Quis enim potest ea, quae probabilia videantur ei, non probare? Quod quidem iam fit etiam in Academia. Habes, inquam, Cato, formam eorum, de quibus loquor, philosophorum. Levatio igitur vitiorum magna fit in iis, qui habent ad virtutem progressionis aliquantum. Quis istud possit, inquit, negare? </p>\
-<p>Quamvis enim depravatae non sint, pravae tamen esse possunt. Esse enim quam vellet iniquus iustus poterat inpune. Te ipsum, dignissimum maioribus tuis, voluptasne induxit, ut adolescentulus eriperes P. Cum autem in quo sapienter dicimus, id a primo rectissime dicitur. </p>
 
 
-
-
-
-inputoutput.statusTrue=完成
-inputoutput.statusFalse=有待
-
-transaction.acceptanceDatetime=订单处理日期
-transaction.acceptanceUser=处理订单的用户
-transaction.accept=接受
-transaction.titleInvoice=确认收据
-transaction.сonfirmation=确认
-ordersearch.erroremail=格式： user@user.com
-transaction.user=使用者
-
-userwallets.startDate=初始日期
-userwallets.endDate=终日期
