fix terms & conditions (rus variant), remove return policy

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -629,7 +629,7 @@ inputoutput.statusFalse=В ожидании
 userwallets.startDate=Начальная дата
 userwallets.endDate=Конечная дата
 
-dashboard.terms=ПРАВИЛА И УСЛОВИЯ
+dashboard.terms=Правила и условия
 dashboard.privacy=Конфиденциальность
 
 dashboard.privacyContent=<p><strong>Exrates прилагает все усилия, чтобы обеспечить конфиденциальность и безопасность информации о клиентах как во время, так и после предоставления услуг, до наивысшего уровня, который компания может обеспечить. </strong></p>\
@@ -651,8 +651,7 @@ dashboard.privacyContent=<p><strong>Exrates прилагает все усили
 <p>Мы не используем ре-маркетинговые списки с чувствительной личной информацией о лицах, посещающих наш сайт или пользующихся мобильным приложением, вне зависимости, собрана ли эта информация нами напрямую, или же была проведена ассоциация с определенным посетителем путем анализа профиля или поведения на сайте. Ограничения на создание списков могут накладываться как на индивидуальные страницы, так и на сайты и приложения полностью, и рекламное содержание не подразумевает знания личной опознаваемой, или чувствительной информации.</p>\
 
 
-dashboard.termsContent=ПРАВИЛА И УСЛОВИЯ</P>\
-<P>Английская версия данного Соглашения является официальной, авторитетной версией для сторон. Переводы представлены исключительно для удобства Клиента, и должны сверяться с английским текстом, который является единственным верным и имеющим юридическую силу вариантом.</p>\
+dashboard.termsContent=<P>Английская версия данного Соглашения является официальной, авторитетной версией для сторон. Переводы представлены исключительно для удобства Клиента, и должны сверяться с английским текстом, который является единственным верным и имеющим юридическую силу вариантом.</p>\
 <p>Данное Соглашение заключается между TECHNODEXON INTERNATIONAL COMPANY LTD («Компания»), зарегистрированной по адресу 99 Foch ave, Staten Island, NY 10305 United States of America, и клиентом, физическим или юридическим лицом («Клиент»). </p>\
 <h5><strong>1. ОБЩИЕ ПОЛОЖЕНИЯ</strong></h5>\
 <p>Приведенное ниже содержание описывает условия, на которых Компания предоставляет Клиенту («Вам») доступ к своему Сайту (Exrates.me) и/или приложениям для смартфонов ОС iOS iPhone или Android и использованию услуг («Соглашение»). По всем вопросам в отношении данного Соглашения следует обращаться в Службу поддержки клиентов. Клиент обязан ознакомиться, согласиться и принять все правила и условия, содержащиеся в данном Соглашении, без изменений, что включает в себя те условия, которые изложены ниже, а также правила и условия, вводимые путем ссылок, прежде чем он станет Клиентом Компании. Дальнейшее использование Клиентом Сайта Exrates и/или собственных приложений Exrates для iOS iPhone или Android является подтверждением его согласия следовать правилам и условиям данного Соглашения в той форме, в которой они могут к нему относиться. Данное Соглашение вступает в силу в момент принятия регистрации от Клиента. В случае, если Клиент не согласен на соблюдение условий данного Соглашения, он должен прекратить использование или отказаться от доступа к услугам Компании, и немедленно сообщить Компании об этом в письменном виде.</p>\
