add user block and chat block

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -609,6 +609,8 @@ transaction.user=使用者
 userwallets.startDate=初始日期
 userwallets.endDate=终日期
 
+dashboard.onlinechatbanned=Вам не разрешено отправлять сообщения CN
+
 dashboard.terms=Terms and Conditions
 dashboard.privacy=Privacy Policy
 
