--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -482,6 +482,7 @@ currency.rate=Current rate
 dashboard.onlinechat=ONLINE CHAT
 dashboard.onlinechatsend=Send
 dashboard.onlinechatenter=Enter message
+dashboard.onlinechatbanned=You are not allowed to send messages
 dashboard.dealshistory=ALL TRADES
 dashboard.transactions=MY TRADES
 dashboard.time=Time
