--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -545,6 +545,7 @@ currency.rate=Текущий курс
 dashboard.onlinechat=ОНЛАЙН ЧАТ
 dashboard.onlinechatsend=Отправить
 dashboard.onlinechatenter=Введите сообщение
+dashboard.onlinechatbanned=Вам не разрешено отправлять сообщения
 dashboard.dealshistory=ВСЕ СДЕЛКИ
 dashboard.transactions=МОИ СДЕЛКИ
 dashboard.time=Время
