add contact page

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -598,6 +598,15 @@ inputoutput.status =状态
 inputoutput.statusTrue=完成
 inputoutput.statusFalse=有待
 
+contacts.feedback=Обратная связь CN
+contacts.name=Имя CN
+contacts.messageText=Текст сообщения CN
+contacts.contactPhone=Contact phone: +19734742145
+contacts.address=<p>Address:</p>\
+<p>99 Foch ave</p>\
+<p>Staten Island, NY 10305</p>\
+<p>USA</p>
+
 dashboard.terms=Terms and Conditions
 dashboard.privacy=Privacy Policy
 
