--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -559,6 +559,15 @@ inputoutput.statusFalse=Pending
 
 dashboard.terms=Terms and Conditions
 dashboard.privacy=Privacy Policy
+contacts.feedback=Feedback
+contacts.name=Name
+contacts.messageText=Message text
+contacts.contactPhone=Contact phone: +19734742145
+contacts.address=<p>Address:</p>\
+<p>99 Foch ave</p>\
+<p>Staten Island, NY 10305</p>\
+<p>USA</p>
+
 
 dashboard.termsContent=
 dashboard.privacyContent=<p><strong>Exrates does its utmost to ensure the privacy, confidentiality and security of its clients are preserved both throughout their interaction with the company and afterwards, to the fullest extent achievable by the company. </strong></p>\
