--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -626,6 +626,17 @@ inputoutput.statusFalse=В ожидании
 dashboard.terms=Правила и условия
 dashboard.privacy=Конфиденциальность
 
+contacts.feedback=Обратная связь
+contacts.name=Имя
+contacts.messageText=Текст сообщения
+contacts.contactPhone=Контактный телефон: +19734742145
+contacts.address=<p>Адрес:</p>\
+<p>99 Foch ave</p>\
+<p>Staten Island, NY 10305</p>\
+<p>USA</p>
+
+
+
 dashboard.privacyContent=<p><strong>Exrates прилагает все усилия, чтобы обеспечить конфиденциальность и безопасность информации о клиентах как во время, так и после предоставления услуг, до наивысшего уровня, который компания может обеспечить. </strong></p>\
 <p>1. В момент регистрации на Exrates клиенты соглашаются предоставить компании определенную информацию о себе, которая используется нами для подтверждения личности и обеспечения надежности и безопасности средств и торгового счета.</p>\
 <p>Данная информация собирается в соответствии с нашими строгими внутренними процедурами, направленными на предотвращение отмывания денег и обеспечения безопасности торговых операций наших клиентов.</p>\
