--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -636,6 +636,11 @@ contacts.address=<p>Адрес:</p>\
 <p>Staten Island, NY 10305</p>\
 <p>USA</p>
 
+validation.nameRequired=Поле "имя" обязательно для заполнения
+validation.messageRequired=Поле "Текст сообщения" обязательно для заполнения
+
+contacts.lettersent=Ваше письмо отправлено
+
 
 dashboard.termsContent=<P>Английская версия данного Соглашения является официальной, авторитетной версией для сторон. Переводы представлены исключительно для удобства Клиента, и должны сверяться с английским текстом, который является единственным верным и имеющим юридическую силу вариантом.</p>\
 <p>Данное Соглашение заключается между TECHNODEXON INTERNATIONAL COMPANY LTD («Компания»), зарегистрированной по адресу 99 Foch ave, Staten Island, NY 10305 United States of America, и клиентом, физическим или юридическим лицом («Клиент»). </p>\
