fix contacts & feedback

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -638,7 +638,10 @@ contacts.address=<p>Адрес:</p>\
 
 validation.nameRequired=Поле "имя" обязательно для заполнения
 validation.messageRequired=Поле "Текст сообщения" обязательно для заполнения
-
+validation.messageIncorrectSize=Размер сообщения должен составлять от 2 до 500 символов
+validation.nameIncorrectSize=Размер имени должен составлять от 2 до 30 символов
+user.fileNotChosen=Файл не выбран
+user.browse=Обзор...
 contacts.lettersent=Ваше письмо отправлено
 
 
