--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -640,6 +640,10 @@ contacts.feedback=Feedback
 contacts.name=Nama
 contacts.messageText=Pesan text
 contacts.contactPhone=Nomor telepon yang bisa dihubungi
+contacts.address=<p>Address:</p>\
+<p>99 Foch ave</p>\
+<p>Staten Island, NY 10305</p>\
+<p>USA</p>
 
 
 dashboard.privacyContent=<p><strong>Exrates Kami berusaha semaksimal mungkin untuk memastikan privasi dan keamanan informasi pelanggan baik selama dan setelah ,serta menyediakan pelayanan ke tingkat tertinggi yang dapat diberikan oleh perusahaan.</strong></p>\
