--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -349,7 +349,9 @@ transaction.yandexmoney=Uang Yandex
 #not tranlsated
 transaction.status=Status
 transaction.titleInvoice=Invoice untuk konfirmasi
-transaction.ñonfirmation=Konfirmasi
+
+transaction.ñonfirmation=alala
+
 transaction.accept=Mengonfirmasi
 #not tranlsated
 transaction.provided=Dikonfirmasi
