--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -602,7 +602,7 @@ transaction.acceptanceDatetime=订单处理日期
 transaction.acceptanceUser=处理订单的用户
 transaction.accept=接受
 transaction.titleInvoice=确认收据
-transaction.сonfirmation=确认
+transaction.confirmation=确认
 ordersearch.erroremail=格式： user@user.com
 transaction.user=使用者
 
