--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -316,7 +316,7 @@ transactions.title=history of transactions
 transaction.user=User
 transaction.acceptanceDatetime=Acceptance date
 transaction.acceptanceUser=Acceptance user
-
+transaction.confirmation=Confirmation
 usermenu.history=history of transactions
 usermenu.inputCredits=input credits
 usermenu.orders=Orders
