--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -350,7 +350,7 @@ transaction.yandexmoney=Uang Yandex
 transaction.status=Status
 transaction.titleInvoice=Invoice untuk konfirmasi
 
-transaction.ñonfirmation=alala
+transaction.confirmation=Konfirmasi
 
 transaction.accept=Mengonfirmasi
 #not tranlsated
