--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -346,7 +346,7 @@ transaction.yandexmoney=Яндекс.Деньги
 #not tranlsated
 transaction.status=Статус
 transaction.titleInvoice=Инвойсы для подтверждения
-transaction.сonfirmation=Подтверждение
+transaction.confirmation=Подтверждение
 transaction.accept=подтвердить
 #not tranlsated
 transaction.provided=Подтверждено
