--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -609,7 +609,9 @@ transaction.user=使用者
 userwallets.startDate=初始日期
 userwallets.endDate=终日期
 
-dashboard.onlinechatbanned=Вам не разрешено отправлять сообщения CN
+dashboard.onlinechatbanned=You have no permission to send messages. Please contact support.
+user.fileNotChosen=文件未选择
+user.browse=浏览...
 
 dashboard.terms=Terms and Conditions
 dashboard.privacy=lk.exrates.me Privacy Policy
