--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -481,7 +481,7 @@ currency.rate=Current rate
 dashboard.onlinechat=ONLINE CHAT
 dashboard.onlinechatsend=Send
 dashboard.onlinechatenter=Enter message
-dashboard.onlinechatbanned=You are not allowed to send messages
+dashboard.onlinechatbanned=You have no permission to send messages. Please contact support.
 dashboard.dealshistory=ALL TRADES
 dashboard.transactions=MY TRADES
 dashboard.time=Time
@@ -563,6 +563,8 @@ inputoutput.statusTrue=Completed
 inputoutput.statusFalse=Pending
 userwallets.startDate=Start date
 userwallets.endDate=End date
+user.fileNotChosen=File not chosen
+user.browse=Browse...
 
 dashboard.terms=Terms and Conditions
 dashboard.privacy=lk.exrates.me Privacy Policy
