--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -22,7 +22,7 @@ admin.login=Masuk
 admin.password=Kata sandi
 admin.phone=Telepon
 admin.registrationDate=Tanggal registrasi
-admin.role=Ðeran
+admin.role=Peran
 admin.save=Simpan
 admin.status=Status
 admin.title=Administrasi
@@ -812,3 +812,6 @@ zopim.livechat.window.title=Dukungan
 zopim.livechat.bubble.title=Apakah ada pertanyaan ?
 zopim.livechat.bubble.text=Klik disini untuk memulai chat
 zopim.livechat.offlineForm.greetings=Kami sedang offline sekarang. Kami mohon maaf. Tinggalkan pesan dan kami akan menghubungi Anda.
+
+user.fileNotChosen=File not chosen
+user.browse=Browse...
