--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -145,7 +145,7 @@ emailsubmitregister.subject=Подтверждение регистрации н
 emailsubmitregister.text=Вы зарегистрировались на exrates.me. Для подтверждения регистрации пройдите по ссылке
 login.blocked=Аккаунт заблокирован.\
 1. Проверьте свой email, в том числе спам, на наличие письма для активации и активируйте свою учетную запись.\
-2. Если вы уже активированы и являетесь активным пользователем, пожалуйста, обратитесь в техподдержку (тут должна быть ссылка на exrates.me/contacts)
+2. Если вы уже активированы и являетесь активным пользователем, пожалуйста, обратитесь в техподдержку
 login.errorLogin=Ошибка входа!
 login.notFound=Неверный пароль или логин!
 login.password=Пароль
