--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -194,7 +194,7 @@ merchants.pendingEnrollment=Jangka waktu penerimaan dana 48 jam
 #not translated
 merchants.depositNotification.body =Silahkan membayar {0} ke dompet {1}
 #not translated
-merchants.depositNotificationWithCurrency.body = Silahkan membayar {0} ke akun {1} <br> \
+merchants.depositNotificationWithCurrencyCNY.body = Silahkan membayar {0} ke akun {1} <br> \
   ICBC <br> \
   ???????????????20???????<br>\
   ICBC ANTON MAZNYI<br>\
@@ -204,6 +204,10 @@ merchants.depositNotificationWithCurrency.body = Silahkan membayar {0} ke akun {
   CONSTRUCTION <br> \
   ANTON MAZNYI <br> \
   6217000010079289347
+merchants.depositNotificationWithCurrencyIDR.body = Silahkan membayar {0} ke akun {1} <br> \
+    1. Bank danamon <br> \
+    2. name  i nyoman mardana<br>\
+    3. Schet 3600851194
 #not translated
 merchants.depositNotificationWithFee =Silahkan membayar %1s di dompet %1s (ditambah Komisi Koin EDR )
 #not translated
@@ -659,7 +663,7 @@ dashboard.privacyContent=<p><strong>Exrates Kami berusaha semaksimal mungkin unt
 <p>7.Dari waktu ke waktu, Exrates dapat berkomunikasi dengan klien melalui telepon atau email, untuk menawarkan layanan baru atau informasi tentang perdagangan opsi biner pada Exrates, atau jenis lain dari perdagangan di pasar keuangan. Juga, perusahaan dapat, dari waktu ke waktu, akan menghubungi pelanggan melalui telepon atau email untuk menginformasikan tentang penawaran khusus yang unik dari Exrates. Klien memberikan persetujuan mereka untuk kontak tersebut pada saat mendaftar pada situs Exrates dan menyetujui persyaratan layanan pada saat pendaftaran. </p>\
 <p>Siapa pun tidak ingin menerima informasi lebih lanjut tentang hal itu dari sebuah perusahaan yang memiliki hak untuk menghubungi klien melalui telepon atau e-mail ,diminta untuk mengakhiri kontak dengan perusahaan.</p>\
 <p>8.Exrates menggunakan pemasaran ulang sebagai alat pemasaran di Internet. Pihak ketiga bisa menampilkan iklan Exrates di situs lain di Internet. </p>\
-<p> Oleh karena itu, perlu diketahui bahwa berkas cookie yang digunakan dari waktu ke waktu untuk menganalisis aktivitas di situs. Dengan memberikan informasi pribadi, Anda menyetujui penggunaannya tanpa pemberitahuan , dan mengesampingkan hak apapun dengan catatan sebagai  berikut:</p>\
+<p> Oleh karena itu, perlu diketahui bahwa berkas cookie yang digunakan dari waktu ke waktu untuk menganalisis aktivitas di situs. Dengan memberikan informasi pribadi, Anda menyetujui penggunaannya tanpa pemberitahuan , dan mengesampingkan hak apapun dengan catatan sebagai  berikut\:</p>\
 <p>Kami tidak mengumpulkan informasi pribadi, secara langsung , namun tidak terbatas pada, alamat email, nomor telepon dan nomor kartu kredit. Exrates tidak mengaitkan informasi pribadi dengan daftar untuk pemasaran ulang, data cookie, data stream atau pengenal anonim lainnya.</p>\
 <p>Kami tidak mengaitkan informasi target seperti demografi, lokasi, informasi pribadi yang dikumpulkan melalui iklan atau sumber iklan di Internet; atau mengungkapkan informasi tersebut kepada pihak ketiga melalui tag pemasaran ulang atau data informasi aliran tentang produk yang terkait dengan iklan kami; dan tidak berbagi dalam database Google informasi lokasi yang akurat tanpa persetujuan dari para pihak yang terkait. </p>\
 <p>Kami tidak menggunakan daftar pemasaran ulang dengan informasi pribadi yang sensitif tentang individu yang mengunjungi website kami atau dengan menggunakan aplikasi mobile, terlepas dari informasi yang dikumpulkan oleh kami secara langsung, atau Asosiasi yang diadakan dengan profil pengunjung secara spesifik dengan menganalisa perilaku atau kegiatan di website. Pembatasan pembentukan daftar dapat dikenakan baik pada halaman individu serta situs dan aplikasi sepenuhnya dan konten iklan tidak berisi tentang keterangan tentang informasi pribadi atau sensitif.</p>\
