--- a/Controller/src/main/resources/about_us.properties
+++ b/Controller/src/main/resources/about_us.properties
@@ -1,3 +1,3 @@
 contacts.telephone= +38 099 618 84 51
 contacts.email=support@exrates.me
-contacts.feedbackEmail=wayfarer2006@ukr.net
+contacts.feedbackEmail=exrates@exrates.me
