--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -650,6 +650,11 @@ contacts.address=<p>Address:</p>\
 <p>99 Foch ave</p>\
 <p>Staten Island, NY 10305</p>\
 <p>USA</p>
+validation.nameRequired=Field "Name" is required
+validation.messageRequired=Field "Message text" is required
+contacts.lettersent=Your letter is sent
+validation.messageIncorrectSize=Size must be between 2 and 500 symbols
+validation.nameIncorrectSize=Size must be between 2 and 30 symbols
 
 
 dashboard.privacyContent=<p><strong>Exrates Kami berusaha semaksimal mungkin untuk memastikan privasi dan keamanan informasi pelanggan baik selama dan setelah ,serta menyediakan pelayanan ke tingkat tertinggi yang dapat diberikan oleh perusahaan.</strong></p>\
